--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,8 +5,8 @@
   <!-- References a Handlebars partial in views/partials/head.handlebars -->
   {{>head}}
  
- <title>Aquascraper</title>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.js"></script>
+<title>Aquascraper</title>
+<script src="https://d3js.org/d3.v4.min.js"></script>
  <!--<script src="../public/clientjs/index.js"></script> -->
 
  <script>
