completes auth, starts memory exhaust bug

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
   {{>head}}
  
   <title>Aquascraper</title>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.js"></script>zz
  <!--<script src="../public/clientjs/index.js"></script> -->
 
  <script>
